@@ -10,7 +10,6 @@ import java.util.Objects;
 import java.util.StringJoiner;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-
 import org.jabref.logic.formatter.Formatters;
 import org.jabref.logic.formatter.IdentityFormatter;
 import org.jabref.logic.formatter.bibtexfields.HtmlToLatexFormatter;
@@ -29,7 +28,6 @@ import org.jabref.model.entry.field.FieldFactory;
 import org.jabref.model.entry.field.InternalField;
 import org.jabref.model.entry.field.StandardField;
 import org.jabref.model.strings.StringUtil;
-
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -42,7 +40,9 @@ public class FieldFormatterCleanups {
     public static final String ENABLED = "enabled";
     public static final String DISABLED = "disabled";
 
-    private static final Logger LOGGER = LoggerFactory.getLogger(FieldFormatterCleanups.class);
+    private static final Logger LOGGER = LoggerFactory.getLogger(
+        FieldFormatterCleanups.class
+    );
 
     /**
      * This parses the key/list map of fields and clean up actions for the field.
@@ -55,34 +55,77 @@ public class FieldFormatterCleanups {
      * <p>
      * Example: <code>pages[normalize_page_numbers]title[escapeAmpersands,escapeDollarSign,escapeUnderscores,latex_cleanup]</code>
      */
-    private static final Pattern FIELD_FORMATTER_CLEANUP_PATTERN = Pattern.compile("([^\\[]+)\\[([^]]+)]");
+    private static final Pattern FIELD_FORMATTER_CLEANUP_PATTERN =
+        Pattern.compile("([^\\[]+)\\[([^]]+)]");
 
     static {
-        DEFAULT_SAVE_ACTIONS = List.of(
-                new FieldFormatterCleanup(StandardField.PAGES, new NormalizePagesFormatter()),
-                new FieldFormatterCleanup(StandardField.DATE, new NormalizeDateFormatter()),
-                new FieldFormatterCleanup(StandardField.MONTH, new NormalizeMonthFormatter()),
-                new FieldFormatterCleanup(InternalField.INTERNAL_ALL_TEXT_FIELDS_FIELD, new ReplaceUnicodeLigaturesFormatter()));
+        DEFAULT_SAVE_ACTIONS =
+            List.of(
+                new FieldFormatterCleanup(
+                    StandardField.PAGES,
+                    new NormalizePagesFormatter()
+                ),
+                new FieldFormatterCleanup(
+                    StandardField.DATE,
+                    new NormalizeDateFormatter()
+                ),
+                new FieldFormatterCleanup(
+                    StandardField.MONTH,
+                    new NormalizeMonthFormatter()
+                ),
+                new FieldFormatterCleanup(
+                    InternalField.INTERNAL_ALL_TEXT_FIELDS_FIELD,
+                    new ReplaceUnicodeLigaturesFormatter()
+                )
+            );
 
-        List<FieldFormatterCleanup> recommendedBibtexFormatters = new ArrayList<>(DEFAULT_SAVE_ACTIONS);
-        recommendedBibtexFormatters.addAll(List.of(
-                new FieldFormatterCleanup(InternalField.INTERNAL_ALL_TEXT_FIELDS_FIELD, new HtmlToLatexFormatter()),
-                new FieldFormatterCleanup(InternalField.INTERNAL_ALL_TEXT_FIELDS_FIELD, new UnicodeToLatexFormatter()),
-                new FieldFormatterCleanup(InternalField.INTERNAL_ALL_TEXT_FIELDS_FIELD, new OrdinalsToSuperscriptFormatter())));
-        RECOMMEND_BIBTEX_ACTIONS = Collections.unmodifiableList(recommendedBibtexFormatters);
+        List<FieldFormatterCleanup> recommendedBibtexFormatters =
+            new ArrayList<>(DEFAULT_SAVE_ACTIONS);
+        recommendedBibtexFormatters.addAll(
+            List.of(
+                new FieldFormatterCleanup(
+                    InternalField.INTERNAL_ALL_TEXT_FIELDS_FIELD,
+                    new HtmlToLatexFormatter()
+                ),
+                new FieldFormatterCleanup(
+                    InternalField.INTERNAL_ALL_TEXT_FIELDS_FIELD,
+                    new UnicodeToLatexFormatter()
+                ),
+                new FieldFormatterCleanup(
+                    InternalField.INTERNAL_ALL_TEXT_FIELDS_FIELD,
+                    new OrdinalsToSuperscriptFormatter()
+                )
+            )
+        );
+        RECOMMEND_BIBTEX_ACTIONS =
+            Collections.unmodifiableList(recommendedBibtexFormatters);
 
-        List<FieldFormatterCleanup> recommendedBiblatexFormatters = new ArrayList<>(DEFAULT_SAVE_ACTIONS);
-        recommendedBiblatexFormatters.addAll(List.of(
-                new FieldFormatterCleanup(StandardField.TITLE, new HtmlToUnicodeFormatter()),
-                new FieldFormatterCleanup(InternalField.INTERNAL_ALL_TEXT_FIELDS_FIELD, new LatexToUnicodeFormatter())));
+        List<FieldFormatterCleanup> recommendedBiblatexFormatters =
+            new ArrayList<>(DEFAULT_SAVE_ACTIONS);
+        recommendedBiblatexFormatters.addAll(
+            List.of(
+                new FieldFormatterCleanup(
+                    StandardField.TITLE,
+                    new HtmlToUnicodeFormatter()
+                ),
+                new FieldFormatterCleanup(
+                    InternalField.INTERNAL_ALL_TEXT_FIELDS_FIELD,
+                    new LatexToUnicodeFormatter()
+                )
+            )
+        );
         // DO NOT ADD OrdinalsToSuperscriptFormatter here, because this causes issues. See https://github.com/JabRef/jabref/issues/2596.
-        RECOMMEND_BIBLATEX_ACTIONS = Collections.unmodifiableList(recommendedBiblatexFormatters);
+        RECOMMEND_BIBLATEX_ACTIONS =
+            Collections.unmodifiableList(recommendedBiblatexFormatters);
     }
 
     private final boolean enabled;
     private final List<FieldFormatterCleanup> actions;
 
-    public FieldFormatterCleanups(boolean enabled, List<FieldFormatterCleanup> actions) {
+    public FieldFormatterCleanups(
+        boolean enabled,
+        List<FieldFormatterCleanup> actions
+    ) {
         this.enabled = enabled;
         this.actions = Objects.requireNonNull(actions);
     }
@@ -90,7 +133,10 @@ public class FieldFormatterCleanups {
     /**
      * Note: String parsing is done at {@link FieldFormatterCleanups#parse(String)}
      */
-    public static String getMetaDataString(List<FieldFormatterCleanup> actionList, String newLineSeparator) {
+    public static String getMetaDataString(
+        List<FieldFormatterCleanup> actionList,
+        String newLineSeparator
+    ) {
         // First, group all formatters by the field for which they apply
         // Order of the list should be kept
         Map<Field, List<String>> groupedByField = new LinkedHashMap<>();
@@ -114,7 +160,11 @@ public class FieldFormatterCleanups {
         for (Map.Entry<Field, List<String>> entry : groupedByField.entrySet()) {
             result.append(entry.getKey().getName());
 
-            StringJoiner joiner = new StringJoiner(",", "[", "]" + newLineSeparator);
+            StringJoiner joiner = new StringJoiner(
+                ",",
+                "[",
+                "]" + newLineSeparator
+            );
             entry.getValue().forEach(joiner::add);
             result.append(joiner);
         }
@@ -172,19 +222,25 @@ public class FieldFormatterCleanups {
         List<FieldFormatterCleanup> result = new ArrayList<>();
 
         // first remove all newlines for easier parsing
-        String formatterStringWithoutLineBreaks = StringUtil.unifyLineBreaks(formatterString, "");
+        String formatterStringWithoutLineBreaks = StringUtil.unifyLineBreaks(
+            formatterString,
+            ""
+        );
 
-        Matcher matcher = FIELD_FORMATTER_CLEANUP_PATTERN.matcher(formatterStringWithoutLineBreaks);
+        Matcher matcher = FIELD_FORMATTER_CLEANUP_PATTERN.matcher(
+            formatterStringWithoutLineBreaks
+        );
         while (matcher.find()) {
             String fieldKey = matcher.group(1);
             Field field = FieldFactory.parseField(fieldKey);
 
             String fieldString = matcher.group(2);
 
-            List<FieldFormatterCleanup> fieldFormatterCleanups = Arrays.stream(fieldString.split(","))
-                                                                       .map(FieldFormatterCleanups::getFormatterFromString)
-                                                                       .map(formatter -> new FieldFormatterCleanup(field, formatter))
-                                                                       .toList();
+            List<FieldFormatterCleanup> fieldFormatterCleanups = Arrays
+                .stream(fieldString.split(","))
+                .map(FieldFormatterCleanups::getFormatterFromString)
+                .map(formatter -> new FieldFormatterCleanup(field, formatter))
+                .toList();
             result.addAll(fieldFormatterCleanups);
         }
         return result;
@@ -193,10 +249,15 @@ public class FieldFormatterCleanups {
     // ToDo: This should reside in MetaDataParser
     public static FieldFormatterCleanups parse(List<String> formatterMetaList) {
         if ((formatterMetaList != null) && (formatterMetaList.size() >= 2)) {
-            boolean enablementStatus = FieldFormatterCleanups.ENABLED.equals(formatterMetaList.get(0));
+            boolean enablementStatus = FieldFormatterCleanups.ENABLED.equals(
+                formatterMetaList.get(0)
+            );
             String formatterString = formatterMetaList.get(1);
 
-            return new FieldFormatterCleanups(enablementStatus, parse(formatterString));
+            return new FieldFormatterCleanups(
+                enablementStatus,
+                parse(formatterString)
+            );
         } else {
             // return default actions
             return new FieldFormatterCleanups(false, DEFAULT_SAVE_ACTIONS);
@@ -224,16 +285,24 @@ public class FieldFormatterCleanups {
             return true;
         }
         if (obj instanceof FieldFormatterCleanups other) {
-            return Objects.equals(actions, other.actions) && (enabled == other.enabled);
+            return (
+                Objects.equals(actions, other.actions) &&
+                (enabled == other.enabled)
+            );
         }
         return false;
     }
 
     @Override
     public String toString() {
-        return "FieldFormatterCleanups{" +
-                "enabled=" + enabled + "," +
-                "actions=" + actions +
-                "}";
+        return (
+            "FieldFormatterCleanups{" +
+            "enabled=" +
+            enabled +
+            "," +
+            "actions=" +
+            actions +
+            "}"
+        );
     }
 }
